--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -14,7 +14,7 @@
 
       <div class="form-group">
         <label>Termín publikace:</label>
-        {{bs-datetimepicker date=model.time_published format='DD.MM.YYYY HH:MM:SS'}}
+        {{bs-datetimepicker date=model.time_published format='DD.MM.YYYY hh:mm'}}
       </div>
 
       <div class="form-group">
