--- a/app/templates/admin/waves.hbs
+++ b/app/templates/admin/waves.hbs
@@ -1,6 +1,14 @@
 <section id="admin-vlny" class="container content-section" style="text-align:justify">
   <h2>Správa vln</h2>
-  <!-- TODO {{#link-to "admin/vlna-edit"}}nová vlna{{/link-to}} -->
+
+  {{#if session.current_user.admin}}
+    {{#link-to "admin/wave-create" class="btn btn-primary inline"}}Nová vlna{{/link-to}}
+  {{else}}
+    <button class="btn btn-primary disabled inline" title="Novou vlnu může přidat pouze administrátor.">Nová vlna</button>
+  {{/if}}
+
+
+
   <table class="table table-striped">
     <thead>
       <tr style="height:45px">
