--- a/app/templates/admin/wave-create.hbs
+++ b/app/templates/admin/wave-create.hbs
@@ -20,7 +20,7 @@
 
       <div class="form-group">
         <label>Čas zveřejnění:</label>
-        {{bs-datetimepicker date=time_published format='DD.MM.YYYY HH:mm'}}
+        {{bs-datetimepicker date=time_published format='DD.MM.YYYY HH:mm' updateDate=(action (mut time_published)) forceDateOutput=true}}
       </div>
 
       <div class="form-group">
