--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -62,7 +62,7 @@
 	      </tr>
 	    </thead>
 	    <tbody>
-	    	{{#each model as |thread|}}
+	    	{{#each threads as |thread|}}
 			<tr>
 				<td>
 					<h5 class="caption-text">
