--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -1,7 +1,6 @@
 <section id="admin-articles" class="container content-section" style="text-align:justify">
   <h2>Správa článků</h2>
-  <div class="alert alert-warning" style="margin-top:20px">Správa článků zatím není funkční.</div>
-  {{#link-to "admin/article-edit" class="btn btn-primary inline"}}Nový článek{{/link-to}}
+  {{#link-to "admin/article-create" class="btn btn-primary inline"}}Nový článek{{/link-to}}
   <table class="table table-striped">
     <thead>
       <tr style="height:45px">
