--- a/app/templates/components/articles-list.hbs
+++ b/app/templates/components/articles-list.hbs
@@ -2,7 +2,7 @@
     <div class="row" style="margin: 20px auto 0 auto;">
       <div class="col-xs-12 col-sm-3">
         <div class="hidden-xs">
-          <img src="{{article.picture}}" style="width: 100%; border-radius: 25px;" align="center">
+          {{#link-to "article" article}}<img src="{{article.picture}}" style="width: 100%; border-radius: 25px;" align="center">{{/link-to}}
         </div>
       </div>
       <div class="col-xs-12 col-sm-9">
