--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -28,6 +28,17 @@
       {{else}}
       <p>Výsledková listina je zatím prázdná</p>
       {{/each}}
+
     </tbody>
   </table>
+
+  {{#if session.current_user.organisator}}
+    {{#if export_loading}}
+        <button class="btn btn-primary disabled inline" title="Úlohu může smazat pouze administrátor.">Exportuji řešitele...</button>
+    {{else}}
+        <button class="btn btn-primary inline" {{action "export-users" task}}>Exportovat řešitele</button>
+    {{/if}}
+    <br><br>
+  {{/if}}
+
 </section>
