--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -1,6 +1,11 @@
 <div class="panel panel-module-{{module-type module.state}}" style="margin-left:0px">
   <div class="panel-heading panel-heading-module-{{module-type module.state}}">
       {{module.name}}
+
+      {{#if session.current_user.organisator}}
+      ({{module.id}})
+      {{/if}}
+
       {{#if module.is_correct}}
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       {{/if}}
