--- a/app/templates/components/correction-unit.hbs
+++ b/app/templates/components/correction-unit.hbs
@@ -11,45 +11,45 @@
 	  <div class="panel-body">
        {{#each model.modules as |module|}}
        <div class="form-group" style="margin-top:20px col-md-12">
-         {{#if module.evaluation.general}}
-             {{correction-general module=module dirty="dirty"}}
-         {{/if}}
-         {{#if module.evaluation.quiz}}
-             {{correction-quiz module=module}}
-         {{/if}}
+          {{correction-module orgs=orgs module=module dirty="dirty"}}
        </div>
        {{/each}}
 
        <button {{action "save"}} class="btn btn-primary">Uložit body</button>
 
-       <div class="form-group" style="margin-top:10px">
-            <select id="a_{{ident}}" class="form-control col-md-1">
-              <option value="">Vyber trofej pro přidání</option>
-              {{#each achievements as |ach|}}
-                <option value="{{ach.id}}">{{ach.title}}</option>
-              {{/each}}
-            </select>
-            <button {{action "add_achievement"}} class="btn btn-primary" style="margin-top:10px">Přidat trofej</button>
-       </div>
-
-
-       <label>Uživatelovy trofeje:</label>
-       {{#each model.achievements as |ach|}}
-           <div>
-              {{achievement-small model=ach}}
-              <a href="javascript.void()" {{action "ach_del" ach.id}}>Odebrat</a>
+       <div class="form-group panel-body">
+           <div class="col-md-6">
+               <div style="float: left;"><label>Uživatelovy trofeje:</label></div>
+               {{#each model.achievements as |ach|}}
+                   <div style="float: left; margin-left: 10px;">
+                      {{achievement-small model=ach}}
+                      <a href="javascript.void()" {{action "ach_del" ach.id}}>Odebrat</a>
+                   </div>
+               {{else}}
+                   &nbsp;&ndash;
+               {{/each}}
            </div>
-       {{else}}
-           Uživatel nemá za tuto úlohu žádné trofeje
-       {{/each}}
 
+            <div class="col-md-4">
+                <select id="a_{{ident}}" class="form-control">
+                  <option value="">Vyber trofej pro přidání</option>
+                  {{#each achievements as |ach|}}
+                    <option value="{{ach.id}}">{{ach.title}}</option>
+                  {{/each}}
+                </select>
+            </div>
 
-       <div class="form-group" style="margin-top:20px">
+            <div class="col-md-2">
+                <button {{action "add_achievement"}} class="btn btn-primary">Přidat trofej</button>
+            </div>
+      </div>
+
+       <div class="form-group">
          <label>Komentář:</label>
          {{#if model.comment}}
-          {{thread-view thread=model.comment}}
+          {{thread-view thread=model.comment mark_as_read=false}}
          {{else}}
-					 <div>
+            <div>
               <button class="btn btn-primary" {{action "new_thread"}}>
                 {{#if new_thread}}
                   Zrušit komentář
@@ -64,9 +64,6 @@
             {{/if}}
 
             {{#if new_thread}}
-              {{#unless session.isAuthenticated}}
-                {{warning-login text="Pro založení nového vlákna musíš být přihlášen."}}
-              {{else}}
                 <div style="margin-top:20px; margin-bottom:20px;">
                     <form class="form-horizontal" style="margin:30px">
                       <div class="controls form-inline" style="margin-top:20px">
@@ -79,7 +76,6 @@
                       <button class="btn btn-primary" style="margin-top:20px" {{action "post_thread"}}>Odeslat</button>
                     </form>
                 </div>
-              {{/unless}}
             {{/if}}
          {{/if}}
        </div>
