Add various modules to correcting

--- a/app/templates/components/correction-module.hbs
+++ b/app/templates/components/correction-module.hbs
@@ -6,7 +6,7 @@
     {{#if module.evaluation.quiz}}(kvíz){{/if}}
     {{#if module.evaluation.programming}}(programovací modul){{/if}}
     {{#if module.evaluation.sortable}}(sortable modul){{/if}}
-    {{#if module.evaluation.input}}(input modul){{/if}}
+    {{#if module.evaluation.text}}(input modul){{/if}}
 
     (id {{module.module_id}})
 
