Fix page overfull when org.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
         {{header-component}}
         {{#if session.isAuthenticated}}
             {{#if session.current_user.organisator}}
-              <div class="row">
+              <div class="row" style="margin-right: 0px;">
                 {{header-admin}}
               </div>
             {{/if}}
