--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -1,7 +1,7 @@
 {{#if model.active}}
     <section class="container content-section" style="text-align:justify">
         <div class="row" style="margin-top: 30px; margin-left: 20px">
-            <h2 id="name" style="color: black">{{model.title}}</h2>
+            <h2 id="name" style="color: black">{{{model.title}}}</h2>
         </div>
         <!-- TODO: center name and image -->
         <div class="row" style="padding-left:5px; margin-left: 20px">
