--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -123,7 +123,7 @@
 						<div class="row">
 							<div class="col-xs-6">
 								<img class="inline" src="{{result.task.picture}}" style="max-width: 45px">
-								<label class="inline" style="margin-left:10px">{{#link-to "task" result.task}}{{result.task.title}}{{/link-to}}</label>
+								<label class="inline" style="margin-left:10px">{{#link-to "task" result.task}}{{{result.task.title}}}{{/link-to}}</label>
 							</div>
 							<div class="col-xs-2">
 								{{#each result.achievements as |achievement|}}
@@ -164,7 +164,7 @@
 						<div class="row">
 							<div class="col-xs-12">
 								<img class="inline" src="{{task.picture}}" style="max-width: 45px">
-								<label class="inline" style="margin-left:10px">{{#link-to "task" task}}{{task.title}}{{/link-to}}</label>
+								<label class="inline" style="margin-left:10px">{{#link-to "task" task}}{{{task.title}}}{{/link-to}}</label>
 							</div>
 						</div>
 					</div>
