--- a/app/templates/components/correction-unit.hbs
+++ b/app/templates/components/correction-unit.hbs
@@ -2,7 +2,7 @@
 	  <div class="panel-heading panel-heading-ksi {{if model.corrected "panel-heading-module-correct"}}" style="hight:400px">
       {{model.user.full_name}}
       <div style="float: right; margin-right: 50px;">
-        {{model.task_id.title}}
+        {{{model.task_id.title}}}
       </div>
       <div style="float: right; margin-left: 50px; margin-right: 50px;">
         {{statemsg}}
