--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     Tato aktivita je realizována v rámci projektu Popularizace vědy a výzkumu v přírodních vědách a matematice s využitím potenciálu MU, reg. č. CZ.1.07/2.3.00/45.0018.
-                    Copyright &copy; KSI 2015&ndash;2016
+                    Copyright &copy;&nbsp;KSI&nbsp;2015&ndash;2016
                 </div>
             </div>
         </div>
