Add link to gCalendar.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -75,5 +75,12 @@
         A: Pravděpodobně ano, aktuální a oficiální informace naleznete na <a href="https://www.fi.muni.cz/admission/bachelor/index.xhtml.cs">oficiálních stránkách Fakulty informatiky MU</a>.
       </div>
     </div>
+
+
+  <h2 id="calendar">Kalendář akcí KSI</h2>
+    <p align="justify">Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.</p>
+
+    <hr>
     <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
+
 </section>
