--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -7,7 +7,7 @@
     {{#each model as |trophy|}}
       <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
         <img src="{{trophy.picture_r}}" width="200px;"/>
-        <p id="profile-text">{{trophy.title}}</p>
+        <p id="profile-text">{{{trophy.title}}}</p>
       </div>
     {{else}}
         <p>V tomto ročníku KSI zatím nejsou žádné trofeje.</p>
