--- a/app/templates/admin/forum.hbs
+++ b/app/templates/admin/forum.hbs
@@ -28,7 +28,7 @@
         <tr>
             <td>
                 <h5 class="caption-text">
-                    {{#link-to "thread" thread}}{{thread.title}}{{/link-to}}<!-- meno vlakna/ulohy - link na vlakno -->
+                    {{#link-to "thread" thread}}{{{thread.title}}}{{/link-to}}<!-- meno vlakna/ulohy - link na vlakno -->
                 </h5>
             </td>
             <td style="text-align: center;"><span class="badge">{{#link-to "thread" thread class="white-link"}}{{thread.posts_count}}{{/link-to}}</span></td> <!-- Počet příspěvků -->
