--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -3,7 +3,7 @@
       <div class="panel-heading panel-heading-article">
         <h1 id="name">
           <img src={{model.picture}} style="width: 120px; border-radius: 25px;">
-          {{model.title}}
+          {{{model.title}}}
         </h1>
       </div>
       <div class="panel-body panel-body-article">
