--- a/app/templates/thread.hbs
+++ b/app/templates/thread.hbs
@@ -5,7 +5,7 @@
 	{{#link-to "forum"}}<button class="btn btn-primary">Zpět na diskusi</button>{{/link-to}}
 	<!-- Sekcia -->
 	<div style="margin:40px;">
-		<h2>{{model.title}}!</h2>
+		<h2>{{{model.title}}}!</h2>
 		{{thread-view thread=model store=store}}
 	</div>
 </section>
