--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -8,7 +8,7 @@
                       <div class="row row-centered">
                         <a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo inline-footer" id="mail-logo"></a>
                         <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
-                        <a href="https://www.youtube.com/channel/UC_Sq9u4KZe6oGzPN3zsMa8A" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
+                        <a href="https://www.youtube.com/channel/UCH0K2_tAhkJNlvfRo5NsEIg" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
                         <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
                         <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Tato aktivita je realizována v rámci projektu Popularizace vědy a výzkumu v přírodních vědách a matematice s využitím potenciálu MU, reg. č. CZ.1.07/2.3.00/45.0018.
+                    Tato aktivita je realizována v&nbsp;rámci projektu Popularizace vědy a&nbsp;výzkumu v&nbsp;přírodních vědách a&nbsp;matematice s&nbsp;využitím potenciálu MU, reg. č.&nbsp;CZ.1.07/2.3.00/45.0018.
                     Copyright &copy;&nbsp;KSI&nbsp;2015&ndash;2016
                 </div>
             </div>
