Show tasks count.

--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -51,7 +51,8 @@
 
 	    {{input type="checkbox" checked=task.wave.show_details}} Zobrazit detaily
 
-        | Celkem max. bodů: <strong>{{task.wave.sum_points}}</strong> (bez bonusových bodů)
+        | Max. bodů: <strong>{{task.wave.sum_points}}</strong> (bez bonusových bodů)
+        | <strong>{{task.wave.tasks_cnt}}</strong> úloh
 
 	    </p>
 	    </td></tr>
