--- a/app/templates/admin/years.hbs
+++ b/app/templates/admin/years.hbs
@@ -14,6 +14,7 @@
         <th>Index</th>
         <th>Ročník</th>
         <th>Max. bodů</th>
+        <th>#úloh</th>
         <th>Akce</th>
       </tr>
     </thead>
@@ -24,6 +25,7 @@
             <td>{{year.index}}</td>
             <td>{{year.year}}</td>
             <td>{{year.sum_points}}</td>
+            <td>{{year.tasks_cnt}}</td>
 
             <td>
 
