--- a/app/templates/admin/waves.hbs
+++ b/app/templates/admin/waves.hbs
@@ -17,6 +17,7 @@
         <th>Garant</th>
         <th>Zveřejnení</th>
         <th>Max. bodů</th>
+        <th>#úloh</th>
         <th>Akce</th>
       </tr>
     </thead>
@@ -29,6 +30,7 @@
             <td>{{#link-to "user-profile" wave.garant}}{{wave.garant.full_name}}{{/link-to}}</td>
             <td>{{date-and-time wave.time_published 'cs'}}</td>
             <td>{{wave.sum_points}}</td>
+            <td>{{wave.tasks_cnt}}</td>
             <td>
             {{#link-to "admin/wave-edit" wave.id class="btn btn-primary inline"}}Upravit{{/link-to}}
 
@@ -56,7 +58,8 @@
 
     <tr style="height:35px; background-color: #FFFFDD;">
         <td colspan=4>&#8721;</td>
-        <td colspan=2><strong>{{sum_points}}</strong></td>
+        <td><strong>{{sum_points}}</strong></td>
+        <td colspan=2><strong>{{sum_tasks_cnt}}</strong></td>
     </tr>
 
     </tbody>
