--- a/app/templates/admin/achievements.hbs
+++ b/app/templates/admin/achievements.hbs
@@ -1,6 +1,7 @@
 <section id="admin-achievement" class="container content-section" style="text-align:justify">
   <h2>Správa trofejí</h2>
   <!-- {{#link-to "admin/ahievement-creare" class="btn btn-primary inline"}}Nová trofej{{/link-to}} -->
+
     <h3>Trofeje v&nbsp;aktuálním ročníku</h3>
        <table class="table table-striped">
         <thead>
@@ -14,9 +15,9 @@
 
        {{#each achs_current as |achievement|}}
             <tr style="height: 45px">
-                <td><img src="{{achievement.picture_r}}" style="height: 25px;" align="center"></td>
+                <td><img src="{{achievement.picture}}" style="height: 25px;" align="center"></td>
                 <td>{{{achievement.title}}}</td>
-                <td><!-- {{#link-to "admin/achievement-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}} -->
+                <td>{{#link-to "admin/achievement-edit" achievement.id class="btn btn-primary inline"}}Upravit{{/link-to}}
                     <button class="btn btn-primary inline" {{action "achievement-grant" achievement}}>Udělit</button>
                     {{#if session.current_user.admin}}
                         {{#if achievement.deleting}}
@@ -49,9 +50,9 @@
 
          {{#each achs_persistent as |achievement|}}
             <tr style="height: 45px">
-                <td><img src="{{achievement.picture_r}}" style="height: 25px;" align="center"></td>
+                <td><img src="{{achievement.picture}}" style="height: 25px;" align="center"></td>
                 <td>{{{achievement.title}}}</td>
-                <td><!-- {{#link-to "admin/achievement-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}} -->
+                <td>{{#link-to "admin/achievement-edit" achievement.id class="btn btn-primary inline"}}Upravit{{/link-to}}
                     <button class="btn btn-primary inline" {{action "achievement-grant" achievement}}>Udělit</button>
                     {{#if session.current_user.admin}}
                         {{#if achievement.deleting}}
@@ -67,7 +68,7 @@
          {{else}}
             <p>Žádné perzistentní trofeje.</p>
          {{/each}}
- 
+
         </tbody>
       </table>
 </section>
